# financial-machine-learning

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md  notebooks.md
notebooks/2-Financial_Data_Structures/: cusum_pca_weights.ipynb  information_bars.ipynb
notebooks/3-Labeling/: labeling.ipynb
notebooks/4-Sample_Weights/: sample_weights.ipynb
notebooks/elements-of-statistical-learning/10-Boosting/: boosting.py  ch10_helpers.py  gradient_boosting.py
notebooks/elements-of-statistical-learning/11-Neural_Networks/: ch11_helpers.py  neural_networks.py  projection_pursuit.py
notebooks/elements-of-statistical-learning/12-SVM_Flexible_Discriminants/: ch12_helpers.py  flexible_discriminants.py  svm.py
notebooks/elements-of-statistical-learning/13-Prototype_Methods/: ch13_helpers.py  nearest_neighbors.py  prototype_methods.py
notebooks/elements-of-statistical-learning/14-Unsupervised_Learning/: ch14_helpers.py  clustering.py  principal_components.py
notebooks/elements-of-statistical-learning/15-Random_Forests/: ch15_helpers.py  random_forests.py
notebooks/elements-of-statistical-learning/16-Ensemble_Learning/: ch16_helpers.py  ensemble_learning.py
notebooks/elements-of-statistical-learning/17-Undirected_Graphical_Models/: ch17_helpers.py  graphical_models.py
notebooks/elements-of-statistical-learning/18-High_Dimensional_Problems/: ch18_helpers.py  high_dimensional.py
notebooks/elements-of-statistical-learning/2-Supervised_Learning/: chapter_boot.py  helpers.py  k_nearest_neighbors.ipynb  k_nearest_neighbors.py  least_squares_regression.ipynb  least_squares_regression.py
notebooks/elements-of-statistical-learning/3-Linear_Methods/: ch3_helpers.py  lasso.ipynb  lasso.py  pcr_pls.ipynb  pcr_pls.py  ridge_regression.ipynb  ridge_regression.py  subset_selection.ipynb  subset_selection.py
notebooks/elements-of-statistical-learning/4-Linear_Methods_Classification/: ch4_helpers.py  lda.py  logistic_regression.py  separating_hyperplanes.py
notebooks/elements-of-statistical-learning/5-Basis_Expansions/: ch5_helpers.py  smoothing_splines.py  splines.py
notebooks/elements-of-statistical-learning/6-Kernel_Smoothing/: ch6_helpers.py  kernel_density.py  kernel_smoothers.py
notebooks/elements-of-statistical-learning/7-Model_Assessment/: bias_variance.py  ch7_helpers.py  cross_validation.py
notebooks/elements-of-statistical-learning/8-Model_Inference/: bagging.py  ch8_helpers.py  em_algorithm.py
notebooks/elements-of-statistical-learning/9-Additive_Models_Trees/: additive_models.py  ch9_helpers.py  decision_trees.py
notebooks/financial-machine-learning/2-Financial_Data_Structures/: cusum_pca_weights.py  information_bars.py
notebooks/financial-machine-learning/3-Labeling/: labeling.py
notebooks/financial-machine-learning/4-Sample_Weights/: sample_weights.ipynb  sample_weights.py
scripts/: convert_to_second_bars.py  download_atpwta_tennis_data.py  download_tmdb_movie_metadata.py  generate_all_bars.py
src/financial_machine_learning/: __init__.py  bars.py  esl_loaders.py  filters.py  labeling.py  weights.py
tests/: conftest.py  test_bars.py  test_filters.py  test_foo.py  test_labeling.py  test_weights.py
