[project]
name = "financial-machine-learning"
version = "0.0.1"
description = "This is a project for notebooks for advances in financial machine learning"
authors = [{ name = "tkm", email = "xy@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.14,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "plotly>=5.24.0",
]

[project.urls]
Homepage = "https://tkm212bc.github.io/financial-machine-learning/"
Repository = "https://github.com/tkm212bc/financial-machine-learning"
Documentation = "https://tkm212bc.github.io/financial-machine-learning/"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "deptry>=0.24.0",
    "ty>=0.0.14",
    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_machine_learning"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"notebooks/**/*.ipynb" = ["E402"]

[tool.ruff.format]
preview = true

[tool.deptry]
known_first_party = ["financial_machine_learning"]
extend_exclude = ["docs"]
github_output = true
