[project]
name = "financial-machine-learning"
version = "0.0.1"
description = "Python library and notebooks for Advances in Financial Machine Learning (López de Prado) and Elements of Statistical Learning"
authors = [{ name = "tkm" }]
readme = "README.md"
keywords = ["finance", "machine learning", "quantitative finance", "time series", "financial data"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "marimo>=0.23.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.13.0",
    "plotly>=5.24.0",
    "kagglehub>=0.3.0",
]

[project.urls]
Homepage = "https://tkm212bc.github.io/financial-machine-learning/"
Repository = "https://github.com/tkm212bc/financial-machine-learning"
Documentation = "https://tkm212bc.github.io/financial-machine-learning/"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.5.1",
    "tox-uv>=1.29.0",
    "deptry>=0.25.1",
    "ty>=0.0.14",
    "ruff>=0.14.14",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_machine_learning"]

[tool.ty.environment]
python = "./.venv"
python-version = "3.14"
extra-paths = [
    "notebooks/elements-of-statistical-learning/2-Supervised_Learning",
    "notebooks/elements-of-statistical-learning/3-Linear_Methods",
    "notebooks/elements-of-statistical-learning/4-Linear_Methods_Classification",
    "notebooks/elements-of-statistical-learning/5-Basis_Expansions",
    "notebooks/elements-of-statistical-learning/6-Kernel_Smoothing",
    "notebooks/elements-of-statistical-learning/7-Model_Assessment",
    "notebooks/elements-of-statistical-learning/8-Model_Inference",
    "notebooks/elements-of-statistical-learning/9-Additive_Models_Trees",
    "notebooks/elements-of-statistical-learning/10-Boosting",
    "notebooks/elements-of-statistical-learning/11-Neural_Networks",
    "notebooks/elements-of-statistical-learning/12-SVM_Flexible_Discriminants",
    "notebooks/elements-of-statistical-learning/13-Prototype_Methods",
    "notebooks/elements-of-statistical-learning/14-Unsupervised_Learning",
    "notebooks/elements-of-statistical-learning/15-Random_Forests",
    "notebooks/elements-of-statistical-learning/16-Ensemble_Learning",
    "notebooks/elements-of-statistical-learning/17-Undirected_Graphical_Models",
    "notebooks/elements-of-statistical-learning/18-High_Dimensional_Problems",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov", "--cov-report=term-missing", "--cov-report=xml"]

[tool.coverage.run]
source = ["financial_machine_learning"]
branch = true
omit = ["*/esl_loaders.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
]

[tool.ruff]
target-version = "py314"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
[tool.ruff.format]
preview = true

[tool.deptry]
known_first_party = ["financial_machine_learning", "helpers", "ch3_helpers", "ch4_helpers", "ch5_helpers", "ch6_helpers", "ch7_helpers", "ch8_helpers", "ch9_helpers", "ch10_helpers", "ch11_helpers", "ch12_helpers", "ch13_helpers", "ch14_helpers", "ch15_helpers", "ch16_helpers", "ch17_helpers", "ch18_helpers"]
extend_exclude = ["docs"]
github_output = true
[tool.deptry.package_module_name_map]
scikit-learn = "sklearn"
